Refactor ApiController